# vector

./: .clang-format  .gitignore  CMakeLists.txt  vec.c  vec.h
.github/workflows/: main.yml
include/vec/: vec.h
src/: vec.c
test/: CMakeLists.txt  main.c
